--- a/style.css
+++ b/style.css
@@ -53,19 +53,127 @@ main {
   height: 100%;
 }
 
-/* HEADER NAV */
+div.nav-wrapper {
+  height: 80px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-/* that's placeholder for now */
-header {
-  height: 64px;
-  background-color: grey;
+.icon-menu {
+  width: 40px;
+  height: 25px;
+  background-image: url("images/icon-hamburger.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+a.btn-nav {
+  display: none;
+}
+.nav-wrapper ul.nav-links {
+  list-style-type: none;
+}
+
+@media screen and (max-width: 880px) {
+  ul.nav-links {
+    list-style-type: none;
+    width: 90%;
+    top: -60rem;
+    background-color: white;
+    border-radius: 15px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  ul.nav-mobile {
+    top: 6rem;
+  }
+}
+
+/*  NAV DESKTOP */
+@media screen and (min-width: 880px) {
+  nav {
+    background-color: white;
+    max-width: 1146px;
+    width: 100%;
+    margin: auto;
+  }
+
+  .icon-menu {
+    display: none;
+  }
+
+  div.logo {
+    margin-top: 10px;
+  }
+
+  .nav-wrapper ul.nav-links {
+    display: block;
+  }
+
+  ul.nav-links li {
+    display: inline-block;
+  }
+
+  ul.nav-links li a {
+    font-size: 0.8rem;
+    margin-right: 1.5rem;
+    text-decoration: none;
+    color: var(--GrayishBlue);
+    position: relative;
+  }
+
+  ul.nav-links li a:hover {
+    color: var(--DarkBlue);
+  }
+
+  a.link-hover:hover::after {
+    width: 100%;
+    height: 4px;
+    display: block;
+    position: absolute;
+    content: "";
+    bottom: -1.75rem;
+    background-color: var(--LimeGreen);
+  }
+
+  a.btn-nav {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    line-height: 44px;
+    color: var(--VeryLightGray);
+    font-weight: 400;
+    font-size: 0.8rem;
+    width: 163px;
+    padding: 0 1rem;
+    height: 44px;
+    border-radius: 55px;
+    background-image: linear-gradient(
+      45deg,
+      hsl(136deg 65% 51%) 0%,
+      hsl(175deg 100% 40%) 50%,
+      hsl(192deg 70% 51%) 100%
+    );
+  }
+
+  a.btn-nav:hover {
+    opacity: 0.5;
+  }
 }
 
 /* HERO WRAPPER */
 
 /* that's placeholder for now */
 div.hero-wrapper {
-  background-color: white;
+  background-color: var(--VeryLightGray);
   height: 672px;
 }
 
@@ -472,7 +580,7 @@ a.footer-btn {
 }
 
 .footer-btn:hover {
-  filter: brightness(1.75);
+  opacity: 0.8;
 }
 
 p.footer-disclaimer {
